--- a/comicsdb/templates/comicsdb/team_list.html
+++ b/comicsdb/templates/comicsdb/team_list.html
@@ -1,69 +1,99 @@
-{% extends "comicsdb/comics_base.html" %}
+{% extends parent_template|default:"base.html" %}
 {% load thumbnail %}
 {% load static %}
 
 {% block title %}Teams{% endblock title %}
 
-{% block comic_content %}
+{% block content %}
 
   {% if team_list %}
-    <nav class="level">
-      <div class="level-left">
-        <div class="level-item">
-          <p class="subtitle is-5">
-            <strong>{{ page_obj.paginator.count }}</strong> Team{{ page_obj.paginator.count|pluralize }}
-          </p>
+    <!-- hero -->
+    <section class="hero">
+      <div class="hero-body">
+        <div class="container has-text-centered">
+          <h1 class="title is-3">Team{{ team_list.count|pluralize }} List</h1>
         </div>
-        <div class="level-item">
-          <form action="{% url 'team:search' %}" method="get" accept-charset="utf-8">
-            <div class="field has-addons">
-              <p class="control">
-                <input class="input" name="q" type="search" placeholder="Find a team">
-              </p>
-              <p class="control">
-                <button class="button">
-                  Search
-                </button>
+      </div>
+    </section>
+    <!-- end hero -->
+
+    <!-- team list -->
+    <section>
+      <div class="container">
+        <!-- main box -->
+        <div class="box">
+          <!-- navigation -->
+          <nav class="level">
+            <!-- search box -->
+            <div class="level-left">
+              <div class="level-item">
+                <p class="subtitle is-5">
+                  <strong>{{ page_obj.paginator.count }}</strong> Team{{ page_obj.paginator.count|pluralize }}
+                </p>
+              </div>
+              <div class="level-item">
+                <form action="{% url 'team:search' %}" method="get" accept-charset="utf-8">
+                  <div class="field has-addons">
+                    <p class="control">
+                      <input class="input" name="q" type="search" placeholder="Find a team">
+                    </p>
+                    <p class="control">
+                      <button class="button">Search</button>
+                    </p>
+                  </div>
+                </form>
+              </div>
+            </div>
+            <!-- end search box -->
+            <!-- add button -->
+            <div class="level-right">
+              <p class="level-item">
+                {% if user.is_authenticated %}
+                  <a class="button is-primary" href="{% url 'team:create' %}" title="Add a new team">
+                    <span class="icon is-small">
+                      <i class="fas fa-plus"></i>
+                    </span>
+                    <span>New</span>
+                  </a>
+                {% endif %}
               </p>
             </div>
-          </form>
-        </div>
-      </div>
-      <div class="level-right">
-        <p class="level-item">
-        {% if user.is_authenticated %}
-          <a class="button is-primary" href="{% url 'team:create' %}" title="Add a new team">
-          <span class="icon is-small">
-            <i class="fas fa-plus"></i>
-          </span>
-          <span>New</span>
-          </a>
-        {% endif %}
-        </p>
-      </div>
-    </nav>
+            <!-- end button -->
+          </nav>
+          <!-- end navigation -->
 
-    <div class="columns is-multiline">
-      {% for team in team_list %}
-      <div class="column is-one-quarter has-text-centered">
-        <a href="{% url 'team:detail' team.slug %}">
-          <figure class="image is-2by3">
-          {% if team.image %}
-            {% thumbnail team.image "320x480" crop="center" format="WEBP" as im %}
-              <img src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}" alt="{{ team.name }}">
-            {% endthumbnail %}
-          {% else %}
-            <img src="{% static 'site/img/image-not-found.webp' %}" alt="No image for {{ team.name }}">
-          {% endif %}
-          </figure>
-        </a>
-        <a href="{% url 'team:detail' team.slug %}">{{ team.name }}</a>
+          <!-- team columns -->
+          <div class="columns is-multiline">
+            {% for team in team_list %}
+              <div class="column is-one-quarter has-text-centered">
+                <a href="{% url 'team:detail' team.slug %}">
+                  <figure class="image is-2by3">
+                    {% if team.image %}
+                      {% thumbnail team.image "320x480" crop="center" format="WEBP" as im %}
+                        <img src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}" alt="{{ team.name }}">
+                      {% endthumbnail %}
+                    {% else %}
+                      <img src="{% static 'site/img/image-not-found.webp' %}" alt="No image for {{ team.name }}">
+                    {% endif %}
+                  </figure>
+                </a>
+                <a href="{% url 'team:detail' team.slug %}">{{ team.name }}</a>
+              </div>
+            {% endfor %}
+          </div>
+          <!-- end team columns -->
+        </div>
+        <!-- end main box -->
       </div>
-      {% endfor %}
-  </div>
+    </section>
+    <!-- end team list -->
   {% else %}
-  <p>No Story Teams currently available. Do you want to create one?</p>
-    <a class="button is-primary" href="{% url 'team:create' %}" title="Add a new team">New</a>
+    <section>
+      <div class="container">
+        <p>No Story Teams currently available. Do you want to create one?</p>
+        <a class="button is-primary" href="{% url 'team:create' %}" title="Add a new team">New</a>
+      </div>
+    </section>
   {% endif %}
 {% endblock %}
 
