--- a/comicsdb/templates/comicsdb/series_list.html
+++ b/comicsdb/templates/comicsdb/series_list.html
@@ -1,81 +1,111 @@
-{% extends "comicsdb/comics_base.html" %}
+{% extends parent_template|default:"base.html" %}
 {% load thumbnail %}
 {% load static %}
 
 {% block title %}Series{% endblock title %}
 
-{% block comic_content %}
+{% block content %}
 
   {% if series_list %}
-    <nav class="level">
-      <div class="level-left">
-        <div class="level-item">
-          <p class="subtitle is-5">
-            {% if page_obj.paginator %}
-              <strong>{{ page_obj.paginator.count }}</strong> Series
-            {% else %}
-              <strong>{{ series_list.count }}</strong> Series
-            {% endif %}
-          </p>
+    <!-- hero -->
+    <section class="hero">
+      <div class="hero-body">
+        <div class="container has-text-centered">
+          <h1 class="title is-3">Series List</h1>
         </div>
-        <div class="level-item">
-          <form action="{% url 'series:search' %}" method="get" accept-charset="utf-8">
-            <div class="field has-addons">
-              <p class="control">
-                <input class="input" name="q" type="search" placeholder="Find a series">
-              </p>
-              <p class="control">
-                <button class="button">
-                  Search
-                </button>
+      </div>
+    </section>
+    <!-- end hero -->
+
+    <!-- series list -->
+    <section>
+      <div class="container">
+        <!-- main box -->
+        <div class="box">
+          <!-- navigation -->
+          <nav class="level">
+            <!-- search box -->
+            <div class="level-left">
+              <div class="level-item">
+                <p class="subtitle is-5">
+                  {% if page_obj.paginator %}
+                    <strong>{{ page_obj.paginator.count }}</strong> Series
+                  {% else %}
+                    <strong>{{ series_list.count }}</strong> Series
+                  {% endif %}
+                </p>
+              </div>
+              <div class="level-item">
+                <form action="{% url 'series:search' %}" method="get" accept-charset="utf-8">
+                  <div class="field has-addons">
+                    <p class="control">
+                      <input class="input" name="q" type="search" placeholder="Find a series">
+                    </p>
+                    <p class="control">
+                      <button class="button">Search</button>
+                    </p>
+                  </div>
+                </form>
+              </div>
+            </div>
+            <!-- end search box -->
+            <!-- add button -->
+            <div class="level-right">
+              <p class="level-item">
+                {% if user.is_authenticated %}
+                  <a class="button is-primary" href="{% url 'series:create' %}" title="Add a new series">
+                    <span class="icon is-small">
+                      <i class="fas fa-plus"></i>
+                    </span>
+                    <span>New</span>
+                  </a>
+                {% endif %}
               </p>
             </div>
-          </form>
-        </div>
-      </div>
-      <div class="level-right">
-        <p class="level-item">
-          {% if user.is_authenticated %}
-          <a class="button is-primary" href="{% url 'series:create' %}" title="Add a new series">
-          <span class="icon is-small">
-            <i class="fas fa-plus"></i>
-          </span>
-          <span>New</span>
-          </a>
-          {% endif %}
-        </p>
-      </div>
-    </nav>
+            <!-- end button -->
+          </nav>
+          <!-- end navigation -->
 
-    <div class="columns is-multiline">
-      {% for series in series_list %}
-      <div class="column is-one-quarter has-text-centered">
-        <a href="{% url 'series:detail' series.slug %}">
-          <figure class="image is-2by3">
-            {% with cover=series.first_issue_cover %}
-              {% if cover %}
-                {% thumbnail cover "320x480" crop="center" format="WEBP" as im %}
-                  <img src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}" alt="{{ series }}">
-                {% endthumbnail %}
-              {% else %}
-                <img src="{% static 'site/img/image-not-found.webp' %}" alt="No image for {{ series }}">
-              {% endif %}
-            {% endwith %}
-          </figure>
-        </a>
-        {% with count=series.issue_count %}
-        <a href="{% url 'series:detail' series.slug %}">
-            {{ series }}
-            <br/>
-            <small>{{ count }} issue{{ count|pluralize }}</small>
-        </a>
-        {% endwith %}
+          <!-- series columns -->
+          <div class="columns is-multiline">
+            {% for series in series_list %}
+              <div class="column is-one-quarter has-text-centered">
+                <a href="{% url 'series:detail' series.slug %}">
+                  <figure class="image is-2by3">
+                    {% with cover=series.first_issue_cover %}
+                      {% if cover %}
+                        {% thumbnail cover "320x480" crop="center" format="WEBP" as im %}
+                          <img src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}" alt="{{ series }}">
+                        {% endthumbnail %}
+                      {% else %}
+                        <img src="{% static 'site/img/image-not-found.webp' %}" alt="No image for {{ series }}">
+                      {% endif %}
+                    {% endwith %}
+                  </figure>
+                </a>
+                {% with count=series.issue_count %}
+                  <a href="{% url 'series:detail' series.slug %}">
+                    {{ series }}
+                    <br/>
+                    <small>{{ count }} issue{{ count|pluralize }}</small>
+                  </a>
+                {% endwith %}
+              </div>
+            {% endfor %}
+          </div>
+          <!-- end series columns -->
+        </div>
+        <!-- end main box -->
       </div>
-      {% endfor %}
-  </div>
+    </section>
+    <!-- end publisher list -->
   {% else %}
-  <p>No Series currently available. Do you want to add one?</p>
-  <a class="button is-primary" href="{% url 'series:create' %}" title="Add a new series">New</a>
+    <section>
+      <div class="container">
+        <p>No Series currently available. Do you want to add one?</p>
+        <a class="button is-primary" href="{% url 'series:create' %}" title="Add a new series">New</a>
+      </div>
+    </section>
   {% endif %}
 {% endblock %}
 
