--- a/comicsdb/templates/comicsdb/week_list.html
+++ b/comicsdb/templates/comicsdb/week_list.html
@@ -1,79 +1,108 @@
-{% extends "comicsdb/comics_base.html" %}
+{% extends parent_template|default:"base.html" %}
 {% load thumbnail %}
 {% load static %}
 
 {% block title %}New Comics{% endblock title %}
 
-{% block comic_content %}
+{% block content %}
 
   {% if issue_list %}
-    <h1 class="title is-4">Comics released on {{ release_day|date:'F d, Y' }}</h1>
-    <nav class="level">
-      <div class="level-left">
-        <div class="level-item">
-          <p class="subtitle is-5">
-            {% if page_obj.paginator %}
-              <strong>{{ page_obj.paginator.count }}</strong> Issue{{ page_obj.paginator.count|pluralize }}
-            {% else %}
-              <strong>{{ issue_list.count }}</strong> Issue{{ issue_list.count|pluralize }}
-            {% endif %}
-          </p>
+      <!-- hero -->
+    <section class="hero">
+      <div class="hero-body">
+        <div class="container has-text-centered">
+          <h1 class="title is-3">Comics released on {{ release_day|date:'F d, Y' }}</h1>
         </div>
-        <div class="level-item">
-          <form action="{% url 'issue:search' %}" method="get" accept-charset="utf-8">
-            <div class="field has-addons">
-              <p class="control">
-                <input class="input" name="q" type="search" placeholder="Find an issue">
-              </p>
-              <p class="control">
-                <button class="button">
-                  Search
-                </button>
+      </div>
+    </section>
+    <!-- end hero -->
+
+    <!-- week list -->
+    <section>
+      <div class="container">
+        <!-- main box -->
+        <div class="box">
+          <!-- navigation -->
+          <nav class="level">
+            <!-- search box -->
+            <div class="level-left">
+              <div class="level-item">
+                <p class="subtitle is-5">
+                  {% if page_obj.paginator %}
+                    <strong>{{ page_obj.paginator.count }}</strong> Issue{{ page_obj.paginator.count|pluralize }}
+                  {% else %}
+                    <strong>{{ issue_list.count }}</strong> Issue{{ issue_list.count|pluralize }}
+                  {% endif %}
+                </p>
+              </div>
+              <div class="level-item">
+                <form action="{% url 'issue:search' %}" method="get" accept-charset="utf-8">
+                  <div class="field has-addons">
+                    <p class="control">
+                      <input class="input" name="q" type="search" placeholder="Find an issue">
+                    </p>
+                    <p class="control">
+                      <button class="button">Search</button>
+                    </p>
+                  </div>
+                </form>
+              </div>
+            </div>
+            <!-- end search box -->
+            <!-- add button -->
+            <div class="level-right">
+              <p class="level-item">
+                {% if user.is_authenticated %}
+                  <a class="button is-primary" href="{% url 'issue:create' %}" title="Add a new issue">
+                    <span class="icon is-small">
+                      <i class="fas fa-plus"></i>
+                    </span>
+                    <span>New</span>
+                  </a>
+                {% endif %}
               </p>
             </div>
-          </form>
-        </div>
-      </div>
-      <div class="level-right">
-        <p class="level-item">
-        {% if user.is_authenticated %}
-          <a class="button is-primary" href="{% url 'issue:create' %}" title="Add a new issue">
-            <span class="icon is-small">
-              <i class="fas fa-plus"></i>
-            </span>
-            <span>New</span>
-          </a>
-        {% endif %}
-        </p>
-      </div>
-    </nav>
+            <!-- end add button -->
+          </nav>
+          <!-- end navigation -->
 
-    <div class="columns is-multiline">
-      {% for issue in issue_list %}
-      <div class="column is-one-quarter has-text-centered">
-        <a href="{% url 'issue:detail' issue.slug %}">
-          <figure class="image is-2by3">
-          {% if issue.image %}
-            {% thumbnail issue.image "320x480" crop="center" format="WEBP" as im %}
-              <img src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}" alt="{{ issue }}">
-            {% endthumbnail %}
-          {% else %}
-            <img src="{% static 'site/img/image-not-found.webp' %}" alt="No image for {{ issue }}">
-          {% endif %}
-          </figure>
-        </a>
-        <a href="{% url 'issue:detail' issue.slug %}">{{ issue }}</a>
+          <!-- week columns -->
+          <div class="columns is-multiline">
+            {% for issue in issue_list %}
+              <div class="column is-one-quarter has-text-centered">
+                <a href="{% url 'issue:detail' issue.slug %}">
+                  <figure class="image is-2by3">
+                    {% if issue.image %}
+                      {% thumbnail issue.image "320x480" crop="center" format="WEBP" as im %}
+                        <img src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}" alt="{{ issue }}">
+                      {% endthumbnail %}
+                    {% else %}
+                      <img src="{% static 'site/img/image-not-found.webp' %}" alt="No image for {{ issue }}">
+                    {% endif %}
+                  </figure>
+                </a>
+                <a href="{% url 'issue:detail' issue.slug %}">{{ issue }}</a>
+              </div>
+            {% endfor %}
+          </div>
+            <!-- end week columns -->
+        </div>
+        <!-- end main box -->
       </div>
-      {% endfor %}
-    </div>
+    </section>
+    <!-- end week list -->
   {% else %}
-    <p>No Issues currently available. Do you want to add one?</p>
-    <a class="button is-primary" href="{% url 'issue:create' %}" title="Add a new issue">
-      <span class="icon is-small">
-        <i class="fas fa-plus"></i>
-      </span>
-      <span>New</span>
-    </a>
+    <section>
+      <div class="container">
+        <p>No Issues currently available. Do you want to add one?</p>
+        <a class="button is-primary" href="{% url 'issue:create' %}" title="Add a new issue">
+          <span class="icon is-small">
+            <i class="fas fa-plus"></i>
+          </span>
+          <span>New</span>
+        </a>
+      </div>
+    </section>
   {% endif %}
 {% endblock %}
 
