--- a/comicsdb/templates/comicsdb/statistics.html
+++ b/comicsdb/templates/comicsdb/statistics.html
@@ -16,6 +16,9 @@
       <div class="box">
         {% bar_chart monthly_add_count with id='chart-2' library={"title":"Issues Added Per Month", "hAxis": {"title": "Number of Issues", "minValue": "0"},} %}
       </div>
+      <div class="box">
+        {% bar_chart monthly_creator with id='chart-3' library={"title":"Creators Added Per Month", "hAxis": {"title": "Number of Creators", "minValue": "0"},} %}
+      </div>
     </div>
   </section>
 {% endblock %}
