--- a/comicsdb/templates/comicsdb/statistics.html
+++ b/comicsdb/templates/comicsdb/statistics.html
@@ -11,10 +11,10 @@
   <section>
     <div class="container">
       <div class="box">
-        {% pie_chart pub_issues with id='chart-1' height='400px' library={"title":"Issue Counts Per Publisher", "sliceVisibilityThreshold": ".02"} %}
+        {% pie_chart publisher_counts with id='chart-1' height='400px' library={"title":"Issue Counts Per Publisher", "sliceVisibilityThreshold": ".02"} %}
       </div>
       <div class="box">
-        {% bar_chart monthly_add_count with id='chart-2' library={"title":"Issues Added Per Month", "hAxis": {"title": "Number of Issues", "minValue": "0"},} %}
+        {% bar_chart monthly_issues with id='chart-2' library={"title":"Issues Added Per Month", "hAxis": {"title": "Number of Issues", "minValue": "0"},} %}
       </div>
       <div class="box">
         {% bar_chart monthly_creator with id='chart-3' library={"title":"Creators Added Per Month", "hAxis": {"title": "Number of Creators", "minValue": "0"},} %}
