Add chart for monthly count of characters added

--- a/comicsdb/templates/comicsdb/statistics.html
+++ b/comicsdb/templates/comicsdb/statistics.html
@@ -19,6 +19,9 @@
       <div class="box">
         {% bar_chart monthly_creator with id='chart-3' library={"title":"Creators Added Per Month", "hAxis": {"title": "Number of Creators", "minValue": "0"},} %}
       </div>
+      <div class="box">
+        {% bar_chart monthly_character with id='chart-4' library={"title":"Characters Added Per Month", "hAxis": {"title": "Number of Characters", "minValue": "0"},} %}
+      </div>
     </div>
   </section>
 {% endblock %}
