Add hero section to statistics template

--- a/comicsdb/templates/comicsdb/statistics.html
+++ b/comicsdb/templates/comicsdb/statistics.html
@@ -8,6 +8,16 @@
 {% endblock %}
 
 {% block content %}
+  <!-- hero -->
+  <section class="hero">
+    <div class="hero-body">
+      <div class="container has-text-centered">
+        <h1 class="title is-3">Metron Database Statistics</h1>
+      </div>
+    </div>
+  </section>
+  <!-- end hero -->
+  <!-- statistics -->
   <section>
     <div class="container">
       <div class="box">
@@ -24,4 +34,5 @@
       </div>
     </div>
   </section>
+  <!-- end statistics -->
 {% endblock %}
