Add filter on series volume for issues

--- a/comicsdb/templates/comicsdb/issue_list.html
+++ b/comicsdb/templates/comicsdb/issue_list.html
@@ -83,6 +83,12 @@
                 </div>
               </div>
               <div class="field">
+                <label class="label">Series Volume Number</label>
+                <div class="control">
+                  <input class="input" type="text" name="series_volume" placeholder="Enter Series Volume">
+                </div>
+              </div>
+              <div class="field">
                 <label class="label">Issue Number</label>
                 <div class="control">
                   <input class="input" type="text" name="number" placeholder="Enter Issue Number">
