Update series list template
Added link for series issue list on the series issue count info

--- a/comicsdb/templates/comicsdb/series_list.html
+++ b/comicsdb/templates/comicsdb/series_list.html
@@ -86,7 +86,9 @@
                 {% with count=series.issue_count %}
                   <a href="{% url 'series:detail' series.slug %}">
                     {{ series }}
-                    <br/>
+                  </a>
+                  <br/>
+                  <a href="{% url 'series:issue' series.slug %}">
                     <small>{{ count }} issue{{ count|pluralize }}</small>
                   </a>
                 {% endwith %}
