Minor tweak to the series list template
If the series doesn't have any issue show '0 issues'

--- a/comicsdb/templates/comicsdb/series_list.html
+++ b/comicsdb/templates/comicsdb/series_list.html
@@ -83,14 +83,18 @@
                     {% endwith %}
                   </figure>
                 </a>
+                <a href="{% url 'series:detail' series.slug %}">
+                  {{ series }}
+                </a>
+                <br/>
                 {% with count=series.issue_count %}
-                  <a href="{% url 'series:detail' series.slug %}">
-                    {{ series }}
-                  </a>
-                  <br/>
+                  {% if count %}
                   <a href="{% url 'series:issue' series.slug %}">
                     <small>{{ count }} issue{{ count|pluralize }}</small>
                   </a>
+                  {% else %}
+                    <small>0 issues</small>
+                  {% endif %}
                 {% endwith %}
               </div>
             {% endfor %}
