Add note about future projects to home page

--- a/comicsdb/templates/comicsdb/home.html
+++ b/comicsdb/templates/comicsdb/home.html
@@ -54,7 +54,14 @@
               If you wish to tag your comic archives with metadata from Metron, head over Github
               and install <a href="https://github.com/bpepple/metron-tagger">Metron-Tagger</a>. <b>Note:</b>
               you need an account on Metron to access the REST API.
-            </h2>            
+            </h2>   
+            <br />
+            <h1 class="title is-5">Future Projects</h1>
+            <h2 class="subtitle is-6">
+              Initial work has started on a comic server, and with any luck I'll be moving it to a public git repository once it's in 
+              a functional state for public consumption. Most likely it will be late September or October (dependent on the amount of free 
+              time I have).
+            </h2>
           </div>
           <!-- end info box -->
 
