--- a/comicsdb/templates/comicsdb/issue_list.html
+++ b/comicsdb/templates/comicsdb/issue_list.html
@@ -22,52 +22,71 @@
       <div class="columns">
         <!-- Main Column -->
         <div class="column">
-          <div class="box">
-            <nav class="level">
-              <div class="level-left">
-                <div class="level-item">
-                  <p class="subtitle is-5">
-                    {% if page_obj.paginator %}
-                      <strong>{{ page_obj.paginator.count }}</strong> Issue{{ page_obj.paginator.count|pluralize }}
-                    {% else %}
-                      <strong>{{ issue_list.count }}</strong> Issue{{ issue_list.count|pluralize }}
-                    {% endif %}
-                  </p>
-                </div>
-              </div>
-              <div class="level-right">
-                <p class="level-item">
-                  {% if user.is_authenticated %}
-                    <a class="button is-primary" href="{% url 'issue:create' %}" title="Add a new issue">
-                      <span class="icon is-small">
-                        <i class="fas fa-plus"></i>
-                      </span>
-                      <span>New</span>
-                    </a>
+          <!-- navigation -->
+          <nav class="level">
+            <div class="level-left">
+              <div class="level-item">
+                <p class="subtitle is-5">
+                  {% if page_obj.paginator %}
+                    <strong>{{ page_obj.paginator.count }}</strong> Issue{{ page_obj.paginator.count|pluralize }}
+                  {% else %}
+                    <strong>{{ issue_list.count }}</strong> Issue{{ issue_list.count|pluralize }}
                   {% endif %}
                 </p>
               </div>
-            </nav>
-
-            <div class="columns is-multiline">
-              {% for issue in issue_list %}
-                <div class="column is-one-quarter has-text-centered">
-                  <a href="{% url 'issue:detail' issue.slug %}">
-                    <figure class="image is-2by3">
-                      {% if issue.image %}
-                        {% thumbnail issue.image "320x480" crop="center" format="WEBP" as im %}
-                          <img src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}" alt = "{{ issue }}">
-                        {% endthumbnail %}
-                      {% else %}
-                        <img src="{% static 'site/img/image-not-found.webp' %}" alt="No image for {{ issue }}">
-                      {% endif %}
-                    </figure>
-                  </a>
-                  <a href="{% url 'issue:detail' issue.slug %}">{{ issue }}</a>
-                </div>
-              {% endfor %}
             </div>
+            <div class="level-right">
+              <p class="level-item">
+                {% if user.is_authenticated %}
+                <a class="button is-primary" href="{% url 'issue:create' %}" title="Add a new issue">
+                  <span class="icon is-small">
+                    <i class="fas fa-plus"></i>
+                  </span>
+                  <span>New</span>
+                </a>
+                {% endif %}
+              </p>
+            </div>
+          </nav>
+          <!-- end navigation -->
+
+          <!-- issue list -->
+          <div class="columns is-multiline">
+            {% for issue in issue_list %}
+            <div class="column is-one-quarter has-text-centered">
+              <!-- issue card -->
+              <div class="card">
+                <!-- card header -->
+                <header class="card-header">
+                  <p class="card-header-title is-centered">{{ issue }}</p>
+                </header>
+                <!-- end card header -->
+                <!-- card image -->
+                <div class="card-image">
+                  <figure class="image is-2by3">
+                    {% if issue.image %}
+                      {% thumbnail issue.image "320x480" crop="center" format="WEBP" as im %}
+                        <img src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}" alt="{{ issue }}">
+                      {% endthumbnail %}
+                    {% else %}
+                      <img src="{% static 'site/img/image-not-found.webp' %}" alt="No image for {{ issue }}">
+                    {% endif %}
+                  </figure>
+                </div>
+                <!-- end card image -->
+                <!-- card footer -->
+                <footer class="card-footer">
+                  <a href="{% url 'issue:detail' issue.slug %}" class="card-footer-item">
+                    Info
+                  </a>
+                </footer>
+                <!-- end card footer -->
+              </div>
+              <!-- end issue card -->
+            </div>
+            {% endfor %}
           </div>
+          <!-- end issue list-->
         </div>
         <!-- End Main Column-->
 
@@ -102,7 +121,7 @@
                       <option value="">Select Cover Year</option>
                       {% now "Y" as current_year %}
                       {% for i in 1939|cover_year_range:current_year  %}
-                        <option value="{{ i }}">{{ i }}</option>
+                      <option value="{{ i }}">{{ i }}</option>
                       {% endfor %}
                     </select>
                   </div>
@@ -145,8 +164,8 @@
   {% else %}
   <section>
     <div class="container">
-    <p>No Issues currently available. Do you want to add one?</p>
-    <a class="button is-primary" href="{% url 'issue:create' %}" title="Add a new issue">New</a>
+      <p>No Issues currently available. Do you want to add one?</p>
+      <a class="button is-primary" href="{% url 'issue:create' %}" title="Add a new issue">New</a>
     </div>
   </section>
   {% endif %}
