--- a/comicsdb/templates/comicsdb/character_list.html
+++ b/comicsdb/templates/comicsdb/character_list.html
@@ -85,7 +85,7 @@
                 {% with count=character.issue_count %}
                   {% if count %}
                     <a href="{% url 'character:issue' character.slug %}" class="card-footer-item">
-                      {{ count }} Issues
+                      {{ count }} Issue{{ count|pluralize }}
                     </a>
                   {% else %}
                     <p class="card-footer-item">0 Issues</p>
