--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,5 @@
-{% load static %}<!DOCTYPE html>
+{% load static %}
+{% load django_simple_bulma %}<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -7,8 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{% block title %}{% endblock %}</title>
     <link rel="shortcut icon" type="image/png" href="{% static 'site/img/favicon.ico' %}"/>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css">
-    <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
+    {% bulma %}
+    {% font_awesome %}
     {% block headscripts %}{% endblock %}
   </head>
   <body class="has-navbar-fixed-top">
@@ -52,6 +53,5 @@
     </footer>
 
     {% block js %}{% endblock %}
-    <script src="{% static 'site/js/navbar.js' %}"></script>
   </body>
 </html>
