Use django-simple-bulma in the flatpages template

--- a/templates/flatpages/default.html
+++ b/templates/flatpages/default.html
@@ -1,11 +1,12 @@
-{% load static %}<!DOCTYPE html>
+{% load static %}
+{% load django_simple_bulma %}<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{{ flatpage.title}}</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css">
-    <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
+    {% bulma %}
+    {% font_awesome %}
   </head>
   <body class="has-navbar-fixed-top">
     <!-- navbar -->
@@ -62,9 +63,5 @@
       </div>
     </footer>
     <!-- end footer -->
-
-    <!-- js -->
-    <script src="{% static 'site/js/navbar.js' %}"></script>
-    <!-- end js -->
   </body>
 </html>
