--- a/templates/flatpages/default.html
+++ b/templates/flatpages/default.html
@@ -7,6 +7,7 @@
     <title>{{ flatpage.title}}</title>
     {% bulma %}
     {% font_awesome %}
+    <link rel="stylesheet" href="{% static 'site/css/base.css' %}">
   </head>
   <body class="has-navbar-fixed-top">
     <!-- navbar -->
@@ -36,32 +37,7 @@
     <!-- end content -->
 
     <!-- footer -->
-    <footer class="footer">
-      <div class="content has-text-centered is-small">
-        <p>
-          <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">
-            <img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" />
-          </a>
-          <br />
-          This work is licensed under a 
-          <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">
-            Creative Commons Attribution-ShareAlike 4.0 International License
-          </a>.
-        </p>
-        <p>
-          Icons made by
-          <a href="http://www.freepik.com" title="Freepik" target="_blank" rel="noopener noreferrer">Freepik</a>
-          from
-          <a href="https://www.flaticon.com/" title="Flaticon" target="_blank" rel="noopener noreferrer">
-            www.flaticon.com
-          </a>
-          is licensed by
-          <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank" rel="noopener noreferrer">
-            CC 3.0 BY
-          </a>
-        </p>
-      </div>
-    </footer>
+    {% include "footer.html" %}
     <!-- end footer -->
   </body>
 </html>
